fix image chooser overflow in Firefox

--- a/client/scss/components/modal.scss
+++ b/client/scss/components/modal.scss
@@ -125,6 +125,7 @@
 		&.is-gapless {
 			padding: 10px;
 			display: flex;
+			overflow: auto;
 		}
 
 		&.modal-loading {
